--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "react": "18.2.0",
     "react-hook-form": "^7.52.1",
     "react-native": "0.74.3",
+    "react-native-elements": "^3.4.3",
     "react-native-safe-area-context": "^4.10.7",
     "react-native-screens": "^3.32.0",
-    "react-native-splash-screen": "^3.3.0"
+    "react-native-splash-screen": "^3.3.0",
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
