--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "react-native": "0.74.3",
     "react-native-elements": "^3.4.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-reanimated": "^3.14.0",
     "react-native-safe-area-context": "^4.10.7",
     "react-native-screens": "^3.32.0",
+    "react-native-snap-carousel": "^1.6.1",
     "react-native-splash-screen": "^3.3.0",
+    "react-native-stars": "^1.2.2",
     "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
@@ -32,6 +35,8 @@
     "@react-native/metro-config": "0.74.85",
     "@react-native/typescript-config": "0.74.85",
     "@types/react": "^18.2.6",
+    "@types/react-native-snap-carousel": "^3.8.11",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
