--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/bottom-tabs": "^6.6.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.10.0",
+    "@reduxjs/toolkit": "^2.2.6",
     "react": "18.2.0",
     "react-hook-form": "^7.52.1",
     "react-native": "0.74.3",
@@ -24,7 +25,8 @@
     "react-native-snap-carousel": "^1.6.1",
     "react-native-splash-screen": "^3.3.0",
     "react-native-stars": "^1.2.2",
-    "react-native-vector-icons": "^10.1.0"
+    "react-native-vector-icons": "^10.1.0",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
