--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.10.0",
     "@reduxjs/toolkit": "^2.2.6",
+    "mobx": "^6.13.1",
+    "mobx-react-lite": "^4.0.7",
     "react": "18.2.0",
     "react-hook-form": "^7.52.1",
     "react-native": "0.74.3",
@@ -36,7 +38,8 @@
     "@react-native/eslint-config": "0.74.85",
     "@react-native/metro-config": "0.74.85",
     "@react-native/typescript-config": "0.74.85",
-    "@types/react": "^18.2.6",
+    "@types/react": "^18.3.3",
+    "@types/react-native": "^0.73.0",
     "@types/react-native-snap-carousel": "^3.8.11",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
@@ -45,7 +48,7 @@
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "18.2.0",
-    "typescript": "5.0.4"
+    "typescript": "^5.0.4"
   },
   "engines": {
     "node": ">=18"
